fix: add TenantService in worflow v2